# Scribe

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRODUCT_DESIGN.md  README.md  TODO.md  Taskfile.yml  app.go  deny.toml  diagnostics_test.go  go.mod  go.sum  main.go  md5_suppression_test.go  missing_dependencies_test.go  open_path_test.go  performance_benchmark_test.go  persistence_test.go  pprof.go  pprof_test.go  progress_bridge_test.go  remote_refresh_test.go  shutdown_lifecycle_test.go  startup_scan_test.go  wails.json  wails_events.go  wails_options.go  wails_options_test.go
.github/workflows/: ci.yml  release.yml  tag-release.yml
crates/scribe-app/: Cargo.toml  build.rs
crates/scribe-app/src/: bbcode.rs  components.rs  flows.rs  main.rs  model.rs  overlays.rs  rows.rs  tests.rs  theme.rs  tray.rs  window.rs
crates/scribe-core/: Cargo.toml
crates/scribe-core/examples/: catalog_filter_gate.rs  codec_gate.rs  codec_lab.rs  installer_gate.rs  scanner_gate.rs  storage_gate.rs
crates/scribe-core/src/: archive.rs  catalog.rs  client.rs  install_manager.rs  installer.rs  lib.rs  matcher.rs  models.rs  rkyv_gate.rs  scanner.rs  settings.rs  storage.rs
docs/: dependency-audit.md  desktop-stack-evaluation.md  performance-baseline.md
frontend/: .oxfmtrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  svelte.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite-plugin-build-report.js  vite.config.ts
frontend/src/: App.svelte  main.ts  style.css  svelte.d.ts  wails-absolute-imports.d.ts
frontend/src/lib/: index.ts
frontend/src/lib/addons/: decision.test.ts  decision.ts  health.test.ts  health.ts  missing-dependencies.test.ts  missing-dependencies.ts
frontend/src/lib/catalog/: status.test.ts  status.ts
frontend/src/lib/components/addon/: AddonCard.svelte  index.ts  (+12 more)
frontend/src/lib/db/: addon-detail-cache.test.ts  addon-detail-cache.ts  client.ts  index.ts  query-state.ts
frontend/src/lib/diagnostics/: export.test.ts  export.ts  frontend-perf.test.ts  frontend-perf.ts  memory-cleanup.test.ts  memory-cleanup.ts
frontend/src/lib/hotkeys/: index.ts
frontend/src/lib/install/: preflight.test.ts  preflight.ts  recovery.test.ts  recovery.ts  task-summary.test.ts  task-summary.ts
frontend/src/lib/perf/: installed-addons-index.test.ts  installed-addons-index.ts  remote-catalog-index.test.ts  remote-catalog-index.ts  remote-list.bench.ts  remote-list.test.ts  remote-list.ts
frontend/src/lib/routes/: recovery.test.ts  recovery.ts
frontend/src/lib/schemas/: index.ts
frontend/src/lib/services/: addon-service.ts  app-info-service.ts  context-menu-service.ts  diagnostics-service.ts  esoui-service.test.ts  esoui-service.ts  runtime-service.ts  savedvars-service.ts  settings-service.ts  theme-service.ts  wails-service.ts
frontend/src/lib/stores/: downloads.svelte.test.ts  downloads.svelte.ts  index.ts  install-queue.test.ts  install-queue.ts  navigation.svelte.ts  remote-mutations.svelte.ts  remote.svelte.ts
frontend/src/lib/utils/: index.ts
frontend/src/routes/: FindMorePage.svelte  InstalledPage.svelte  SettingsPage.svelte  UpdatesPage.svelte
internal/addon/: addon.go
internal/esoui/: benchmark_test.go  cache.go  cache_test.go  client.go  client_test.go  db.go  download_manager.go  download_manager_test.go  install_record_test.go  installer.go  installer_test.go  matcher.go  matcher_test.go  models.go  progress_writer.go  progress_writer_test.go
internal/scanner/: benchmark_test.go  parser.go  path_detection_test.go  scanner.go  scanner_test.go
internal/settings/: settings.go  settings_test.go
scripts/: acceptance-windows.ps1  benchmarks.sh  build-release.ps1  build-release.sh  installer.nsi  measure-startup.ps1  profile-backend.sh  profile-desktop.sh  profile-ui-workflows.sh  verify.sh
(+20 files in other folders)
