[workspace]
resolver = "2"
members = ["crates/scribe-core", "crates/scribe-app"]

[workspace.package]
version = "1.0.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/KellHect/Scribe"
rust-version = "1.97"

[workspace.dependencies]
async-io = "2.6"
async-executor = "1.13"
async-lock = "3.4"
event-listener = "5.4"
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "031555662e99a1b5a549990b47f246d475b8288a", default-features = false }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "031555662e99a1b5a549990b47f246d475b8288a" }
gpui_platform = { git = "https://github.com/zed-industries/zed" }
http_client = { git = "https://github.com/zed-industries/zed" }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
redb = "4.1"
reqwest_client = { git = "https://github.com/zed-industries/zed" }
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
toml = "1.1"
time = "0.3"

[patch.crates-io]
async-process = { git = "https://github.com/zed-industries/async-process.git", rev = "0b6d6713570af61806e1e5cb40e0f757cb93fd9d" }
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }

[profile.dev]
debug = "limited"

[profile.release]
lto = "thin"
strip = "symbols"
