[package]
name = "scribe-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
gpui_platform.workspace = true
http_client.workspace = true
reqwest_client.workspace = true
scribe-core = { path = "../scribe-core" }

[[bin]]
name = "scribe"
path = "src/main.rs"

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.31"
